# cpu_stat_ansible2v2

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  ansible-deployer_resource.rc  ansible.yml  config.ini
debug/: ansible.yml  inventory.ini  moc_ansiblerunner.cpp  moc_configmanager.cpp  moc_mainwindow.cpp  moc_windowgraphics.cpp  script.sh
debug/results/: 192.168.0.127.txt  192.168.0.132.txt
headers/: ansiblerunner.h  common.h  configmanager.h  mainwindow.h  progressmanager.h  windowgraphics.h  wslchecker.h
src/: ansiblerunner.cpp  configmanager.cpp  main.cpp  mainwindow.cpp  progressmanager.cpp  windowgraphics.cpp  wslchecker.cpp
